# EL_learner

./: .gitignore  EL_algorithm.py  HermiT_reasoner.py  HypothesisReasoner.py  LICENSE  LLMOracle.py  OWLGateway.java  README.md  Reasoner.py  ReasonerOracle.py  demo.py  demo_llm.py  hypothesis_reasoner.py  java_env.bash  llm_oracle.py  pyproject.toml  reasoner_oracle.py  requirements.txt  unit_tests.py
.github/workflows/: check.yml
java/: OWLGateway.java  java_env.bash
learner/: el_algorithm.py  hypothesis_reasoner.py  llm_oracle.py  reasoner_oracle.py
learner/cache/: backend.py  cache.py  hashing.py
ontologies/: animals.owl  medical.ttl  test_minimal.ttl
tests/: conftest.py  test_cache.py  test_el_algorithm.py
utils/: java_utils.py  owl_parser.py
