[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project]
name = "learner"
version = "0.1.0"
description = ""
authors = [
    {name = "Emil Poiesz",email = "poiesz92@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "owlready2 (>=0.50,<0.51)",
    "py4j (>=0.10.9.9,<0.11.0.0)",
    "pyparsing (>=3.3.2,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "rdflib (>=7.6.0,<8.0.0)",
    "transformers (>=5.5.1,<6.0.0)",
    "accelerate (>=1.13.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
